Fix second scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,6 +41,7 @@ a:hover {
 
 html, body {
     overflow-x: hidden;
+    height: 100dvh;
 }
 
 body {
